Enable preview features of Java 13